nlb load/nlb/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: skymarvel-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  labels:
    k8slens-edit-resource-version: v1
spec:
  rules:
    - host: test.skymarvel.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-user
                port:
                  number: 3000
